# statcan_api_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.ini
info/: indices_as_vectors.txt  table_definitions.csv  table_definitions.txt  vector_definitions.csv  vectors.txt
src/: api_client.py  csv_parser.py  data_processing.py  data_reader.py  database_manager.py  definitions_fetcher.py  main.py
